--- a/index.html
+++ b/index.html
@@ -414,28 +414,31 @@
 	<!-- Find-section-starts -->
 
 
-	<section class="why-choose section">
-		<div class="container justify-content-center">
+	<section class="find doctor section">
+
+		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="section-title">
-						<h2>start finding Doctors.</h2>
+						<h2>Find Doctors</h2>
 						<hr>
 					</div>
 				</div>
 			</div>
-			<div class="row  align-items-center rounded">
-				<div class="col-lg-6 col-12 d-flex justify-content-start">
+			<div class="row">
+				<div class="col-lg-6 col-md-12 d-md-flex justify-content-md-center align-items-md-center col-12 m-auto">
 					<!-- Start Choose Left -->
 					<div class="col-lg-6 col-md-6 col-12">
-						<div class="form-group bg-primary">
-							<div class="nice-select form-control wide " style="background-color: #1A76D1;" tabindex="0"><span
-									class="current  text-white">Department</span>
+						<div class="form-group">
+							<div class="nice-select form-control wide text-white" style="background-color: #1A76D1;"
+								tabindex="0"><span class="current ">Department</span>
 								<ul class="list">
-									<li data-value="1" class="option selected capitalize  ">Doctors</li>
-									<li data-value="2" class="option capitalize ">Cardiologist</li>
-									<li data-value="3" class="option capitalize ">Neurologist</li>
-									<li data-value="4" class="option capitalize ">dentist</li>
+									<li data-value="1" class="option selected  text-dark text-capitalize">General
+										Physician</li>
+									<li data-value="2" class="option text-dark text-capitalize">Cardiologist</li>
+									<li data-value="3" class="option text-dark text-capitalize">Neurologist</li>
+									<li data-value="4" class="option text-dark text-capitalize">Dentist</li>
+									<li data-value="5" class="option text-dark text-capitalize">Gastroenterologist</li>
 								</ul>
 							</div>
 						</div>
@@ -443,29 +446,36 @@
 					<!-- End Choose Left -->
 				</div>
 
-				<div class="col-lg-6 col-12 d-lg-flex justify-content-end">
 
-					<div class="button">
-						<a href="" class="btn capitalize text-white ">use my location</a>
-					</div>
-
-				</div>
-
-				<div class="row w-50 m-5 w-100" style="position: relative; top: 40px;">
-					<div class="col-lg-12 d-lg-flex justify-content-center  ">
-
-						<div class="button col-lg-6 d-flex justify-content-center " style="margin-left: 40px;">
-							<a href="" class="btn capitalize text-white col-12  ">FIND</a>
+				<div
+					class="col-lg-6 col-12 col-md-12  d-lg-flex d-md-flex justify-content-md-center align-items-center justify-content-end">
+					<!-- Start Choose Rights -->
+					<div class="col-lg-6 col-md-4 col-12 ">
+						<div class="button d-flex justify-content-center align-items-center">
+							<a href="" class="btn text-capitalize text-white">use my location</a>
 						</div>
-	
 					</div>
+					<!-- End Choose Rights -->
 				</div>
 
 
 			</div>
-		</div>
-	</section>
+			<div class="row d-flex justify-content-center mt-lg-5">
+				<div class="col-lg-6 col-12 ">
 
+					<a href="" class="btn col-12 text-white">FIND</a>
+
+				</div>
+			</div>
+
+
+
+
+		</div>
+
+
+
+	</section>
 	<!-- Find-section-ends -->
 
 
