--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 	<!--/ End Fun-facts -->
 
 	<!-- Start Why choose -->
-	<section class="why-choose section">
+	<section class="why-choose section my-4">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -376,7 +376,7 @@
 	<!-- Find-section-starts -->
 
 
-	<section class="find doctor section">
+	<section class="find doctor section my-4">
 
 		<div class="container">
 			<div class="row">
