--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						</div>
 						<div class="col-lg-2 col-12">
 							<div class="get-quote">
-								<a href="appointment.html" class="btn">Book Appointment</a>
+								<a href="appointment.html" class="btn find-btn">Find Doctors</a>
 							</div>
 						</div>
 					</div>
