--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
 	
 
-	<!-- Find-section-starts -->
+<!-- Find-section-starts -->
 
 
 	<section class="find doctor section my-5">
@@ -390,20 +390,15 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-12 d-md-flex justify-content-md-center align-items-md-center col-12 m-auto">
 					<!-- Start Choose Left -->
-					<div class="col-lg-6 col-md-6 col-12">
-						<div class="form-group">
-							<div class="nice-select form-control wide text-white" style="background-color: #1A76D1;"
-								tabindex="0"><span class="current ">Department</span>
-								<ul class="list">
-									<li data-value="1" class="option selected  text-dark text-capitalize">General
-										Physician</li>
-									<li data-value="2" class="option text-dark text-capitalize">Cardiologist</li>
-									<li data-value="3" class="option text-dark text-capitalize">Neurologist</li>
-									<li data-value="4" class="option text-dark text-capitalize">Dentist</li>
-									<li data-value="5" class="option text-dark text-capitalize">Gastroenterologist</li>
-								</ul>
-							</div>
-						</div>
+					<div class="col-lg-5 col-md-6 col-12">
+				
+								<select class="form-select text-white fs- rounded  p-2  col-12 text-capitalize" style="background-color: #1A76D1; padding:15px; font-size:15px;" aria-label="Default">
+									<option selected  style = "font-size:15px;padding:15px;"class ="p-2 fs-1 text-capitalize">Department</option>
+									<option value="1" style = "font-size:15px;padding:15px;"class ="p-2 fs-1 text-capitalize">dentist</option>
+									<option value="2" style = "font-size:15px;padding:15px;"class ="p-2 fs-1 text-capitalize">cardiologist</option>
+									<option value="3" style = "font-size:15px;padding:15px;"class ="p-2 fs-1 text-capitalize">neurologist</option>
+									<option value="3" style = "font-size:15px;padding:15px;"class ="p-2 fs-1 text-capitalize">gastroentrologist</option>
+								</select>
 					</div>
 					<!-- End Choose Left -->
 				</div>
@@ -414,7 +409,7 @@
 					<!-- Start Choose Rights -->
 					<div class="col-lg-6 col-md-4 col-12 ">
 						<div class="button d-flex justify-content-center align-items-center">
-							<a href="" class="btn text-capitalize text-white">use my location</a>
+							<div href="" class="btn find-btn text-capitalize text-white">use my location</div>
 						</div>
 					</div>
 					<!-- End Choose Rights -->
@@ -439,7 +434,6 @@
 
 	</section>
 	<!-- Find-section-ends -->
-
 
 	<!-- Footer Area -->
 	<footer id="footer" class="footer ">
