--- a/index.html
+++ b/index.html
@@ -333,8 +333,7 @@
 								</div>
 							</div>
 							<!--/ End Video Animation -->
-							<a href="https://www.youtube.com/watch?v=RFVXy6CRVR4"
-								class="video video-popup mfp-iframe"><i class="fa fa-play"></i></a>
+							<img src="map.png" alt="404 ">
 						</div>
 					</div>
 					<!-- End Choose Rights -->
